--- a/force-app/main/default/classes/CaseTriggerHandler.cls
+++ b/force-app/main/default/classes/CaseTriggerHandler.cls
@@ -1,21 +1,20 @@
-public with sharing class CaseTriggerHandler {
+public without sharing class CaseTriggerHandler {
     public static void handleAfterInsert(List<Case> newCases) {
         // Collect booking-related cases
         List<Case> bookingCases = new List<Case>();
         for (Case c : newCases) {
-            if (c.Booking__c != null) { // only if linked to booking
+            if (c.Booking__c != null) {
                 bookingCases.add(c);
             }
         }
 
         if (bookingCases.isEmpty()) return;
 
-        // Get General Manager profile Id
         Id gmProfileId = [SELECT Id FROM Profile WHERE Name = 'General_Manager' LIMIT 1].Id;
 
-        // Get users with GM profile
-        List<User> gmUsers = [SELECT Id, Email FROM User WHERE ProfileId = :gmProfileId AND IsActive = true];
-
+        //bulkification
+        List<User> gmUsers = [SELECT Id, Email,Name FROM User WHERE ProfileId = :gmProfileId AND IsActive = true];
+        //System.debug(gmUsers);
         if (gmUsers.isEmpty()) return;
 
         List<Messaging.SingleEmailMessage> emails = new List<Messaging.SingleEmailMessage>();
@@ -24,13 +23,13 @@ public with sharing class CaseTriggerHandler {
             for (User gm : gmUsers) {
                 Messaging.SingleEmailMessage email = new Messaging.SingleEmailMessage();
                 email.setToAddresses(new List<String>{ gm.Email });
-                email.setSubject('New Service Request for Booking: ' + c.Booking__c);
+                email.setSubject('New Service Request for Booking:'+ c.CaseNumber);
                 email.setPlainTextBody(
                     'Hello ' +gm.Name+ '\n\n' +
                     'A new Service Request has been created for a booking.' + '\n\n' +
                     'Request Type: ' + c.Request_Type__c + '\n' +
                     'Comments: ' + c.Comments__c + '\n\n' +
-                    'Case Id: ' + c.Id + '\n\n' +
+                    'Case Id: ' + c.CaseNumber + '\n\n' +
                     'Regards,\nHospitality App'
                 );
                 emails.add(email);
