--- a/force-app/main/default/classes/BookingController.cls
+++ b/force-app/main/default/classes/BookingController.cls
@@ -1,6 +1,6 @@
-public with sharing class BookingController {
-
+public with sharing class BookingController {   
     @AuraEnabled(cacheable=true)
+    //returns avaialble rooms for the frontend to display with the room type.
     public static List<Room__c> getAvailableRooms(String roomType) {
         return [
             SELECT Id, Name, Room_Type__c, Status__c,Price_Per_Night__c
@@ -10,10 +10,10 @@ public with sharing class BookingController {
     }
 
     @AuraEnabled
+    //inserts booking into database and updates room status to booked.
     public static Booking__c createBooking(Date checkIn, Date checkOut, Integer noOfGuests, Id roomId,Decimal totalAmount ) {
         Id contactId = UserUtils.getSessionContactId();
         
-        //  Create Booking Record
         Booking__c booking = new Booking__c(
             Guestt__c = contactId,
             Check_In_Date__c = checkIn,
@@ -25,18 +25,18 @@ public with sharing class BookingController {
         );
         insert booking;
 
-        // Step 2: Update Room Status → Booked
         updateRoomStatus(roomId, 'Booked');
 
         return booking;
     }
-
+    //helper method to update the room status as booked once booking is confirmed.
     private static void updateRoomStatus(Id roomId, String newStatus) {
         Room__c r = new Room__c(Id = roomId, Status__c = newStatus);
         update r;
     }
 
     @AuraEnabled(cacheable=true)
+    //required to display user booking in the LWC component.
     public static List<Booking__c> getUserBookings() {
         Id contactId = UserUtils.getSessionContactId();
         if (contactId == null) {
@@ -53,6 +53,7 @@ public with sharing class BookingController {
     }
     
     @AuraEnabled(cacheable=true)
+    //required to show the individual booking details in the card for the user.
 public static Booking__c getBookingById(Id bookingId) {
     return [
         SELECT Id, Name, Booking_Status__c, Check_In_Date__c, Check_Out_Date__c,
@@ -64,6 +65,7 @@ public static Booking__c getBookingById(Id bookingId) {
     ];
 }
  @AuraEnabled
+ //required to cancel the booking via the LWC component.
     public static void cancelBooking(Id bookingId) {
         Booking__c b = [
             SELECT Id, Booking_Status__c, Room__c
@@ -74,7 +76,7 @@ public static Booking__c getBookingById(Id bookingId) {
         b.Booking_Status__c = 'Cancelled';
         update b;
 
-        // free the room back
+        // free the room back with some null checks.
         if (b.Room__c != null) {
             Room__c r = [SELECT Id, Status__c FROM Room__c WHERE Id = :b.Room__c LIMIT 1];
             r.Status__c = 'Available';
