Final Code Push

--- a/force-app/main/default/classes/BookingArchivalBatch.cls
+++ b/force-app/main/default/classes/BookingArchivalBatch.cls
@@ -1,10 +1,13 @@
-public with sharing class BookingArchivalBatch implements Database.Batchable <sObject>{
+public  class BookingArchivalBatch implements Database.Batchable <sObject>{
     public Database.QueryLocator start(Database.BatchableContext bc){
-        String query='SELECT Id,Name,Booking_Status__c,Is_Archived__c FROM Booking__c WHERE Booking_Status__c = \'Cancelled\' AND CreatedDate < LAST_N_DAYS:7 AND Is_Archived__c=\'false\'';
+        String query='SELECT Id,Name,Booking_Status__c,Is_Archived__c FROM Booking__c WHERE Booking_Status__c = \'Cancelled\'  AND Is_Archived__c=false';
         return Database.getQueryLocator(query);
     }
 
     public void execute(Database.BatchableContext bc, List<Booking__c> scope){
+        if(scope.isEmpty()){
+            return;
+        }
         for(Booking__c b:scope){
             b.Is_Archived__c=true;
         }
