--- a/force-app/main/default/classes/BookingQueueArchival.cls
+++ b/force-app/main/default/classes/BookingQueueArchival.cls
@@ -1,5 +1,7 @@
-global with sharing class BookingQueueArchival implements Queueable {
-    global void execute(QueueableContext sc){
-        Database.executeBatch(new BookingArchivalBatch(),200);
+global class BookingQueueArchival implements Queueable {
+    global void execute(QueueableContext sc) {
+        Database.executeBatch(new BookingArchivalBatch(), 200);
+        // Chain the next queueable
+        System.enqueueJob(new FoodOrderQueueArchival());
     }
 }
