--- a/force-app/main/default/classes/BookingTriggerHandler.cls
+++ b/force-app/main/default/classes/BookingTriggerHandler.cls
@@ -19,7 +19,7 @@ public  without sharing class BookingTriggerHandler {
             }
         }
         if(!newTasks.isEmpty()){
-            Database.insert(newTasks,false);
+            Database.insert(newTasks);
         }
     }
 }
