--- a/force-app/main/default/classes/FoodOrderQueueArchival.cls
+++ b/force-app/main/default/classes/FoodOrderQueueArchival.cls
@@ -1,5 +1,6 @@
 global class FoodOrderQueueArchival implements Queueable {
     global void execute(QueueableContext sc) {
+        //database execute batch method is used to execute the batch class.
         Database.executeBatch(new FoodOrderArchivalBatch(), 200);
     }
 }
