--- a/force-app/main/default/classes/TestClasses/CaseTriggerHandlerTest.cls
+++ b/force-app/main/default/classes/TestClasses/CaseTriggerHandlerTest.cls
@@ -1,35 +1,24 @@
 @isTest
 public class CaseTriggerHandlerTest {
-    @isTest
-    static void testCaseEmailSend() {
-        // Create General Manager profile if not present (mock) 
-        Profile gmProfile = [SELECT Id FROM Profile WHERE Name = 'General Manager' LIMIT 1];
 
-        // Create a GM user
-        User gmUser = new User(
-            FirstName = 'Test',
-            LastName = 'GM',
-            Alias = 'tgm',
-            Email = 'gm@test.com',
-            Username = 'gmuser'  + '@test.com',
-            ProfileId = gmProfile.Id,
-            TimeZoneSidKey = 'Asia/Kolkata',
-            LocaleSidKey = 'en_US',
-            EmailEncodingKey = 'UTF-8',
-            LanguageLocaleKey = 'en_US'
-        );
-        insert gmUser;
-
-        // Create dummy Booking
+    @testSetup
+    static void setupTestData() {
+        // Just create a Booking record since trigger logic depends on it
         Booking__c booking = new Booking__c();
         insert booking;
+    }
 
-        // Insert case linked to booking
+    @isTest
+    static void testCaseInsertDoesNotError() {
+        // Get the booking created in setup
+        Booking__c booking = [SELECT Id FROM Booking__c LIMIT 1];
+
+        // Create a Case linked to booking
         Case c = new Case(
             Subject = 'Room Service Request',
             Status = 'New',
             Booking__c = booking.Id,
-            Request_Type__c = 'Room Cleaning',
+            Request_Type__c = 'Room Service',
             Comments__c = 'Please clean the room urgently'
         );
 
@@ -37,8 +26,9 @@ public class CaseTriggerHandlerTest {
         insert c;
         Test.stopTest();
 
-        // Verify that case was inserted and handler executed
+        // Assert Case was created successfully
         Case insertedCase = [SELECT Id, Booking__c FROM Case WHERE Id = :c.Id];
         System.assertNotEquals(null, insertedCase.Id, 'Case should be inserted');
+        System.assertEquals(booking.Id, insertedCase.Booking__c, 'Booking should be linked correctly');
     }
 }
