--- a/force-app/main/default/classes/UserUtils.cls
+++ b/force-app/main/default/classes/UserUtils.cls
@@ -1,6 +1,7 @@
 public with sharing class UserUtils {
     //middleware for checking contact session.
     @AuraEnabled(cacheable=true)
+    // this method will be used for checking the user is valid for performing actions on the experience cloud portal.
     public static Id getSessionContactId() {
         User u = [
             SELECT ContactId
