--- a/force-app/main/default/classes/BookingQueueArchival.cls
+++ b/force-app/main/default/classes/BookingQueueArchival.cls
@@ -1,7 +1,7 @@
 global class BookingQueueArchival implements Queueable {
     global void execute(QueueableContext sc) {
         Database.executeBatch(new BookingArchivalBatch(), 200);
-        // Chain the next queueable
+        //on success of the batch class then queue the next batch class using queueable.
         System.enqueueJob(new FoodOrderQueueArchival());
     }
 }
